schroders and jenson

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -20,7 +20,7 @@ block content
                     #sp17-18.panel-collapse.collapse.in
                         div.panel-body
                             div.row
-                                div.col-md-1
+
                                 div.col-md-2
                                     br
                                     br
@@ -37,17 +37,21 @@ block content
                                     br
                                     br
                                     a(href="http://www.schroders.com")
-                                        img.sponosr-img(src="./img/sponsors/schroders.svg")
+                                        img.sponsor-img(src="./img/sponsors/schroders.jpg")
                                 div.col-md-2
                                     br
                                     br
                                     a(href="http://www.scottlogic.com")
                                         img.sponsor-img(src="./img/sponsors/sl_logo.png")
-                                div.col-md-1
+                                div.col-md-2
+                                    br
+                                    br
+                                    br
+                                    a(href="#")
+                                        img.sponsor-img(src="./img/sponsors/jenson.png")
 
 
                             div.row
-                                div.col-md-1
                                 div.col-md-2
                                     p
                                         | <b>BlackRock</b> combines the best of being a technology pioneer and financial leader. Since our inception in 1988, we’ve grown from an entrepreneurial start-up into the world’s largest investment manager by putting technology - and continuous innovation - at the heart of our business.
@@ -61,14 +65,18 @@ block content
                                         |Since it's launch 2 years ago, <b>.TECH Domains</b> has become the de factor domain extension for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech. .TECH has been a constant promoter of the developer and student community, including supporting coding schools, university clubs, college fests as well as over 200 hackathons  worldwide.
                                 div.col-md-2
                                     p
-                                        | <b>Schroders</b> description
+                                        |For over two centuries and more than seven generations <b>Schroders</b> have grown and developed our expertise in tandem with our clients' needs and interests.
 
                                 div.col-md-2
                                     p
                                         | <b>Scott Logic</b> is a software consultancy company headquartered in the UK. Today, they employ over 190
                                         | of the best people in the industry.
 
-                                div.col-md-1
+                                div.col-md-2
+                                    p
+                                        | <b>Jenson</b> are an experienced team of finance professionals providing a variety of services to a number of clients, ranging in size from start-ups through to fully listed companies quoted on the London Stock Exchange and NASDAQ.
+                                        | Our team of professionals has a wealth of experience across a number of sectors, enabling us to provide an efficient service and bring relevant experience to most organisations to support their strategic requirements.
+                                        | We also work closely with a group of private investors who often supply equity and debt funding to our clients.
 
 
             div.panel-group
