Implement front end validation and error messages
Each input in the form is validated to contain some input and in the case of email, valid syntax for an email address.

--- a/public/contact.css
+++ b/public/contact.css
@@ -2,12 +2,24 @@
     margin-bottom: 2rem;
 }
 
-.success-message, .form-error-message, .captcha-error-message {
+.success-message {
     display: none;
     margin-bottom: 2rem;
 }
 
-/* So reCaptcha overlay is in front of inputs */
+/* So reCAPTCHA overlay is in front of inputs */
 .form-control {
     z-index: 0 !important;
+}
+
+.no-name-message, .no-email-message, .invalid-email-message, .no-subject-message, .no-body-message {
+    display: none;
+    margin-top: 1rem;
+    color: red;
+}
+
+.failure-error-message, .form-error-message, .captcha-error-message {
+    display: none;
+    color: red;
+    margin-bottom: 2rem;
 }
