Improve sponsors page

--- a/public/bannerContentLayout.css
+++ b/public/bannerContentLayout.css
@@ -27,6 +27,17 @@
 }
 
 .page-content-row {
-    padding-top: 2.7rem;
-    padding-bottom: 2.7rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+/* Spacing is performed by the containing elements, not the text */
+h2, h3 {
+    margin-top: 0 !important;
+}
+
+/* Keeps text in expanding panels centered */
+.panel-heading > h3 {
+    margin: auto;
+    text-align: center;
 }
