--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -2,44 +2,78 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title Sponsors - DU CompSoc
-    link(href="/sponsorsStyle.css" rel="stylesheet")
+  title Sponsors - DU CompSoc
+  link(href="/sponsorsStyle.css" rel="stylesheet")
 
 block title
-    +pageBanner("Sponsors", "Thank you to all who help us grow")
+  +pageBanner("Sponsors", "Thank you to all who help us grow")
 
 block content
-    //- contains pictures of our sponsors which act as links to their official websites.
-    div.row
-        .container
-            div.panel-group
-                div.panel.panel-default
-                    div.panel-heading
-                        h3
-                            a(data-toggle="collapse" href="#sp17-18") 2017/18
-                    #sp17-18.panel-collapse.collapse.in
-                        div.panel-body
-                            div.col-md-3
-                                h4 BlackRock
-                            div.col-md-3
-                                h4 Radix
-                            div.col-md-3
-                                h4 HiredGrad
-            div.panel-group
-                div.panel.panel-default
-                    div.panel-heading
-                        h3
-                            a(data-toggle="collapse" href="#sp16-17") 2016/17
-                    #sp16-17.panel-collapse.collapse
-                        div.panel-body
-                            .row.sponsor-row
-                                    .col-md-1
-                                    .col-md-4
-                                        img.sponsor-img(src="./img/sl_logo.png")
-                                    .col-md-6
-                                        h3.sponsor-header Scott Logic
-                                        p
-                                            | Scott Logic is a software consultancy company headquartered in the UK. Today, they employ over 190
-                                            | of the best people in the industry.
-                                            | <a href="http://www.scottlogic.com">http://www.scottlogic.com</a>
-                                    .col-md-1
+  //- contains pictures of our sponsors which act as links to their official websites.
+  div.row
+    .container
+      div.panel-group
+        div.panel.panel-default
+          div.panel-heading
+            h3
+              a(data-toggle="collapse" href="#sp17-18") 2017/18
+          #sp17-18.panel-collapse.collapse.in
+            div.panel-body
+              .row.sponsor-row
+                  .col-md-6
+                    a(href="https://www.blackrock.com")
+                      img.sponsor-img(src="./img/sponsors/blackrock-c.jpg")
+                    p
+                      | <b>BlackRock</b> combines the best of being a technology pioneer and financial leader.
+                      | Since our inception in 1988, we’ve grown from an entrepreneurial start-up into the world’s
+                      | largest investment manager by putting technology - and continuous innovation - at the heart of
+                      | our business.
+                      | Today, as the world’s largest asset manager, with more than $5.7 trillion under management,
+                      | BlackRock brings together financial leadership and state-of-the-art technology to provide
+                      | answers to millions of investors who entrust their financial futures to us.
+
+                  .col-md-6
+                    a(href="https://www.radix.website")
+                      img.sponsor-img(src="./img/sponsors/radix-c.png")
+                    p
+                      | Since it's launch 2 years ago, <b>.TECH Domains</b> has become the de facto domain extension
+                      | for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH
+                      | has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech.
+                      | .TECH has been a constant promoter of the developer and student community, including supporting
+                      | coding schools, university clubs, college fests as well as over 200 hackathons worldwide.
+
+              .row.sponsor-row
+                  .col-md-6
+                    a(href="https://www.schroders.com")
+                      img.sponsor-img(src="./img/sponsors/schroders-c.png")
+                    p
+                      | For over two centuries and more than seven generations <b>Schroders</b> have grown and
+                      | developed our expertise in tandem with our clients' needs and interests.
+
+                  .col-md-6
+                    a(href="https://www.schroders.com")
+                      img.sponsor-img(src="./img/sponsors/jenson-c.png")
+                    p
+                      | <b>Jenson</b> are an experienced team of finance professionals providing a variety of services
+                      | to a number of clients, ranging in size from start-ups through to fully listed companies quoted
+                      | on the London Stock Exchange and NASDAQ.
+                      | Our team of professionals has a wealth of experience across a number of sectors, enabling us to
+                      | provide an efficient service and bring relevant experience to most organisations to support
+                      | their strategic requirements.
+                      | We also work closely with a group of private investors who often supply equity and debt funding
+                      | to our clients.
+
+      div.panel-group
+        div.panel.panel-default
+          div.panel-heading
+            h3
+              a(data-toggle="collapse" href="#sp16-17") 2016/17
+          #sp16-17.panel-collapse.collapse
+            div.panel-body
+              .row.sponsor-row
+                  .col-md-6
+                    img.sponsor-img(src="./img/sponsors/sl_logo.png")
+                    p
+                      | <b>Scott Logic</b> is a software consultancy company headquartered in the UK. Today, they
+                      | employ over 190 of the best people in the industry.
+                      | <a href="http://www.scottlogic.com">http://www.scottlogic.com</a>
