Correct sponsor links

--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -33,7 +33,7 @@ block content
                     | answers to millions of investors who entrust their financial futures to us.
 
                 .col-md-6
-                  a(href="https://www.radix.website")
+                  a(href="http://get.tech")
                     img.sponsor-img(src="./img/sponsors/radix-c.png")
                   p
                     | Since it's launch 2 years ago, <b>.TECH Domains</b> has become the de facto domain extension
@@ -44,7 +44,7 @@ block content
 
               .row.sponsor-row
                 .col-md-6
-                  a(href="https://www.schroders.com")
+                  a(href="https://tpp-uk.com")
                     img.sponsor-img(src="./img/sponsors/tpp.svg")
                   p
                     | TPP is a cutting-edge software company based in Leeds. We're revolutionising healthcare across
@@ -55,7 +55,7 @@ block content
                     | salaries of £40,000 with generous pay rises.
 
                 .col-md-6
-                  a(href="https://www.schroders.com")
+                  a(href="http://www.jensonsolutions.com")
                     img.sponsor-img(src="./img/sponsors/jenson-c.png")
                   p
                     | <b>Jenson</b> are an experienced team of finance professionals providing a variety of services
@@ -69,7 +69,7 @@ block content
 
               .row.sponsor-row
                 .col-md-6
-                  a(href="https://www.schroders.com")
+                  a(href="http://www.schroders.com")
                     img.sponsor-img(src="./img/sponsors/schroders-c.png")
                   p
                     | For over two centuries and more than seven generations <b>Schroders</b> have grown and
