--- a/views/contact.pug
+++ b/views/contact.pug
@@ -12,7 +12,7 @@ block title
 
 block content
     //- row contains two columns, each with the content
-    div.row
+    div.container
         div.col-md-6
             h2 We're social !
             div.row
