Rework the compsoc banner on homepage
The old banner was too tall preventing sponsors to be shown on homepage.
Furthermore this change removes the need to have javascript resizing the
svg. Instead there are two svgs - one for small screens and one for
large.

--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -37,12 +37,12 @@ object {
 }
 
 .banner-container {
-    height: 150px;
+    height: auto;
     line-height: 0;
 }
 
 .banner-container > object {
-    height: 150px;
+    height: auto;
 }
 
 .fa {
