--- a/public/homepageStyle.css
+++ b/public/homepageStyle.css
@@ -10,6 +10,35 @@
     padding: 2rem 2rem;
 }
 
+/* Homepage Banner */
+@media (max-width: 500px) {
+    .mobile-banner {
+        display: block;
+    }
+    .desktop-banner {
+        display: none;
+    }
+}
+
+@media (min-width: 501px) {
+    .mobile-banner {
+        display: none;
+    }
+    .desktop-banner {
+        display: block;
+        max-height: 300px;
+    }
+}
+
+@media (min-width: 2561px) {
+    .mobile-banner {
+        display: none;
+    }
+    .desktop-banner {
+        display: block;
+    }
+}
+
 /* HiredGrad Hacks */
 #hiredGradSignUpModal {
     overflow-y: scroll !important;
