Make the website year dynamic
With any luck, nobody will ever have to touch this ever again.

--- a/views/templates/base.pug
+++ b/views/templates/base.pug
@@ -15,5 +15,5 @@ html(lang="en")
         block content
         block footer
             .footer
-                div &copy; 2016-2017 Durham University CompSoc
+                div &copy; 2016-#{currentYear} Durham University CompSoc
         block scripts
