--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -55,7 +55,7 @@ block content
                   a(href="http://get.tech")
                     img.sponsor-img(src="./img/sponsors/radix-c.png")
                   p
-                    | Since it's launch 2 years ago, <b>.TECH Domains</b> has become the de facto domain extension
+                    | Since its launch 2 years ago, <b>.TECH Domains</b> has become the de facto domain extension
                     | for programmers, startups, tech brands and enthusiasts. With over 250,000 registrations, .TECH
                     | has seen a rapid adoption globally, including brands like Viacom.tech, TNW.tech and CES.tech.
                     | .TECH has been a constant promoter of the developer and student community, including supporting
