--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -24,7 +24,7 @@ block content
                   a(href="https://tpp-uk.com")
                     img.sponsor-img(src="./img/sponsors/tpp.svg")
                   p
-                    | TPP is a cutting-edge software company based in Leeds. We're revolutionising healthcare across
+                    | <b>TPP</b> is a cutting-edge software company based in Leeds. We're revolutionising healthcare across
                     | the world with our pioneering research and technology solutions. We're doing some amazing things
                     | here at TPP and we have some really exciting projects coming up. That's why we're looking for
                     | super-intelligent, geeky graduates for a number of vacancies, including our software developer
