Fix first word missing bug

--- a/views/events.pug
+++ b/views/events.pug
@@ -14,10 +14,8 @@ block content
 
         .col-md-12
             h2 What's On
-            p.information
-                CompSoc holds events all the year round, from hackathons to tech-talks to weekly meetings. Come down and learn something new, meet new people and build some awesome stuff.
-            p.information
-                Take a look at past and future events:
+            p.information CompSoc holds events all the year round, from hackathons to tech-talks to weekly meetings. Come down and learn something new, meet new people and build some awesome stuff.
+            p.information Take a look at past and future events:
 
 
         .col-md-6
