Add legal status to footer

--- a/views/templates/base.pug
+++ b/views/templates/base.pug
@@ -15,5 +15,6 @@ html(lang="en")
         block content
         block footer
             .footer
-                div &copy; 2016-#{currentYear} Durham University CompSoc
+                div
+                    p &copy; 2016-#{currentYear} #[a(href="https://www.compsoc.tech/") Durham University Computing Society] <br /> <span style="font-size:10px">Durham University Computing Society is a student group affiliated with #[a(href="https://durhamsu.com") Durham Students' Union], which is registered in England as a company limited by guarantee (07689815) and a charity (1145400). Durham Students' Union's registered office is Dunelm House, New Elvet, Durham, DH1 3AN.</span>
         block scripts
