--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -73,8 +73,17 @@ object {
 .footer {
     background-color: #333;
     display: flex;
-    height: 3em;
+    height: 6em;
     color: #9d9d9d;
+    text-align:center;
+}
+
+.footer div {
+    max-width: 70%;
+}
+
+.footer a {
+    color: #d8d8d8;
 }
 
 .form-control {
@@ -94,7 +103,7 @@ html, body {
 
 /* Height of navbar minus height of footer */
 .wrapper {
-    min-height: calc(100vh - 50px - 3em);
+    min-height: calc(100vh - 50px - 6em);
 }
 
 .hiredGradButton {
