--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ block content
             .panel.panel-default#main-info
                 .panel-body
                     h2#main-title Do you love technology? Programming? Or just want to learn something new?
-                    h3 CompSoc runs talks, hackathons and workshops for its members throughout the year.
+                    h3 CompSoc runs talks, hackathons and workshops for Durham students throughout the year.
                     h3 Join today to be notified of upcoming events.
                     //- Dirty dirty hack
                     h3.hiredGradButton
