Consistent banner background colour across all pages

--- a/public/bannerContentLayout.css
+++ b/public/bannerContentLayout.css
@@ -4,7 +4,7 @@
     margin-bottom: 0 !important;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
-    background-color: #58595b !important;
+    background-color: #181818 !important;
     color: #eeeeee !important;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .page-title-row {
-    background-color: #58595b;
+    background-color: #181818;
     margin: 0;
     padding-top: 2rem;
     padding-bottom: 2rem;
