--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -103,3 +103,7 @@ block content
                                         | <b>Scott Logic</b> is a software consultancy company headquartered in the UK. Today, they
                                         | employ over 190 of the best people in the industry.
                                         | <a href="http://www.scottlogic.com">http://www.scottlogic.com</a>
+
+
+    #sponsor-us-msg.container
+        p Interested in sponsoring us? #[a(href="/contact") Get in touch].
