New mailing list sign-up form

--- a/views/events.pug
+++ b/views/events.pug
@@ -14,7 +14,8 @@ block content
 
         .col-md-12
             h2 What's On
-            p.information CompSoc holds events all the year round, from hackathons to tech-talks to weekly meetings. Come down and learn something new, meet new people and build some awesome stuff.
+            p.information CompSoc holds events all year round, from hackathons to tech-talks to weekly meetings. Come along and learn something new, meet new people and build some awesome stuff.
+            p.information <a class="typeform-share link" href="https://ducompsoc.typeform.com/to/bMrpxS" data-mode="drawer_right" target="_blank">Sign up to our mailing list</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> to be the first to hear about upcoming events!
             p.information Take a look at past and future events:
 
 
@@ -29,7 +30,7 @@ block content
         .col-md-6
 
             h2 What We've Done!
-            p.information Here's all events we've conducted in the past.
+            p.information Here's all the events we've conducted in the past.
 
             .row
                 img(src="./img/events/events_tpp_pub_quiz.jpg")
@@ -41,7 +42,7 @@ block content
                 img(src="./img/events/events_durhack_2.jpg")
                 a.btn.btn-info.btn-block(href="#dhk2", data-toggle="collapse") DurHack 2017
                 #dhk2.collapse
-                    p CompSoc brought back #[a(href="http://durhack.tech") DurHack] for a second year running and it was a massive success. With #[a(href="http://www.durham.gov.uk/") Durham County Council], #[a(href="https://jobs.barclays.co.uk/") Barclays], #[a(href="https://tpptop50.com/") TPP], #[a(href="https://get.tech").TECH Domains], #[a(href="https://www.waterstons.com/careers") Waterstons], #[a(href="http://www.entrepreneursdurham.co.uk/") Entrepreneurs Durham], #[a(href="http://www.keyboardco.com/") The Keyboard Company], the #[a(href="https://www.dur.ac.uk/computer.science/") Department of Computer Science] and #[a(href="https://www.durhamsu.com/") Durham Students' Union] on board as sponsors, this event was jam-packed with prizes and was not a hackathon to be missed!
+                    p CompSoc brought back #[a(href="http://durhack.tech") DurHack] for a second year running and it was a huge success. With #[a(href="http://www.durham.gov.uk/") Durham County Council], #[a(href="https://jobs.barclays.co.uk/") Barclays], #[a(href="https://tpptop50.com/") TPP], #[a(href="https://get.tech") .TECH Domains], #[a(href="https://www.waterstons.com/careers") Waterstons], #[a(href="http://www.entrepreneursdurham.co.uk/") Entrepreneurs Durham], #[a(href="http://www.keyboardco.com/") The Keyboard Company], the #[a(href="https://www.dur.ac.uk/computer.science/") Department of Computer Science] and #[a(href="https://www.durhamsu.com/") Durham Students' Union] on board as sponsors, this event was jam-packed with prizes and was not a hackathon to be missed!
 
 
             .row
