--- a/views/index.pug
+++ b/views/index.pug
@@ -21,9 +21,15 @@ block content
                     h2#main-title Do you love technology? Programming? Or just want to learn something new?
                     h3 CompSoc runs talks, hackathons and workshops for Durham students throughout the year.
                     h3 Join today to be notified of upcoming events.
+
+                    // Old HiredGrad modal
                     //- Dirty dirty hack
-                    h3.hiredGradButton
+                    //h3.hiredGradButton
                         a.btn.btn-success(href="#hiredGradSignUpModal" data-toggle="modal" role="button") Join Now!
+
+                    // Shiny new Typeform
+                    h3.typeformButton
+                        <a class="typeform-share button btn btn-success" href="https://ducompsoc.typeform.com/to/bMrpxS" data-mode="drawer_right" style="display:inline-block;text-decoration:none;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:7px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Join now! </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
         +quickLinks
 
