--- a/views/templates/marginals.pug
+++ b/views/templates/marginals.pug
@@ -8,7 +8,7 @@ block nav
                 aria-expanded="false" aria-controls="navbar")
                     span.sr-only Toggle navigation
                     i.fa.fa-bars(aria-hidden="true")
-                a.navbar-brand(href="/") CompSoc
+                a.navbar-brand(href="/") Durham CompSoc
 
             div#navbar.navbar-collapse.collapse.navbar-right
                 ul.nav.navbar-nav
@@ -20,7 +20,7 @@ block nav
                         a(href="sponsors") Sponsors
                     li
                         a(href="team") Team
-                    li
+                    //li
                         a(href="blog") Blog
                     li
                         a(href="durhack") DurHack
