--- a/views/events.pug
+++ b/views/events.pug
@@ -57,7 +57,7 @@ block content
                 img(src="./img/events/events_Durhack_2017.png")
                 a.btn.btn-info.btn-block(href='#dhk', data-toggle='collapse') Durhack
                 #dhk.collapse
-                    p Durham University had its first ever 24-hour hackathon sponsored by big names like Durham County Council, GitHub, MLH, Sunderland Software City, Durham Students' Union, Entrepreneurs Durham, Waterstons, Barclays, Microsoft and Durham University. With enormous data from in and around Durham, participants from various UK universities utilised it to produce something that can potentially make a differemce to the region. 24 hours of coding interspersed with workshops, games, VR, short sleep sprints and awesome food, the event was a massive success.
+                    p Durham University had its first ever 24-hour hackathon sponsored by big names like Durham County Council, GitHub, MLH, Sunderland Software City, Durham Students' Union, Entrepreneurs Durham, Waterstons, Barclays, Microsoft and Durham University. With enormous data from in and around Durham, participants from various UK universities utilised it to produce something that can potentially make a difference to the region. 24 hours of coding interspersed with workshops, games, VR, short sleep sprints and awesome food, the event was a massive success.
 
             .row
                 //p
@@ -111,3 +111,6 @@ block content
                 a.btn.btn-info.btn-block(href='#dhack', data-toggle='collapse') Dur(h).ac._k
                 #dhack.collapse
                     p Joe Nash from PayPal talked to the students on March 2, 2016 about what hackathons are, how they are often misunderstood as attempts to break into systems, and how they are a brilliant opportunity to network with people from all parts of the world, develop new skills and an opportunity to land in a job as well! That's how Joe ended up working at PayPal. The students also got introduced to NodeJS.
+
+    #sponsor-us-msg.container
+        p Interested in running an event with us? #[a(href="/contact") Get in touch].
