--- a/views/blog.pug
+++ b/views/blog.pug
@@ -4,7 +4,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title Blog - DUCompSoc
+    title Blog - Durham CompSoc
     link(href="/aboutStyle.css" rel="stylesheet")
 
 //- The main title and banner with icons
