--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,7 +2,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title Contact Us - DUCompSoc
+    title Contact Us - Durham CompSoc
     link(href="/contact.css" rel="stylesheet")
 
 
