--- a/views/events.pug
+++ b/views/events.pug
@@ -2,7 +2,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title Events - DUCompSoc
+    title Events - Durham CompSoc
     link(href="/events.css" rel="stylesheet")
 
 block title
