--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ extends templates/marginals.pug
 include ./quickLinks.pug
 
 block head
-    title Homepage - DU CompSoc
+    title Homepage - Durham CompSoc
     link(href="/homepageStyle.css" rel="stylesheet")
 
 block content
