--- a/views/team.pug
+++ b/views/team.pug
@@ -2,7 +2,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title The Team - DUCompSoc
+    title The Team - Durham CompSoc
     link(href="/team.css" rel="stylesheet")
 
 block title
