--- a/views/durhack.pug
+++ b/views/durhack.pug
@@ -3,7 +3,7 @@ extends layouts/banner-content.pug
 include ./pageBanner.pug
 
 block append head
-    title DurHack - DUCompSoc
+    title DurHack - Durham CompSoc
     link(href="/aboutStyle.css" rel="stylesheet")
     link(href="/durhackStyle.css")
 
